# LazyManager

./: .gitignore  lazymanager.py  main.py  pyproject.toml
lazymanager/: __init__.py  app.py  config.py  git_utils.py  lazymanager.py  models.py  repository.py  widgets.py
